--- a/src/components/FormLogin/FormLogin.module.css
+++ b/src/components/FormLogin/FormLogin.module.css
@@ -23,7 +23,7 @@
     border-color: rgba(39, 0, 128, 1) !important;
 }
 
-.containerFormConta {
+.containerFormAccount {
     margin-left: 42px;
     margin-top: 25px;
 }
